welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
  for (i <- 0 to nums.lenght -1){
    if (nums[i] == lookingFor){
      return lookingFor
    }
    else {
      return -1
    }
  }
}